--- a/Page_projet_version005/css/pageSheet.css
+++ b/Page_projet_version005/css/pageSheet.css
@@ -56,7 +56,7 @@ p {
   border-style: solid;
   border-radius: 5px;
   border-color: #00FFFF;/*Cyan*/
-  width: 330px;
+  width: 400px;
   height: 200px;
   box-shadow: 0px 0px 3px 1px #0ff;/*Effet néon*/
   margin: auto;
@@ -68,12 +68,12 @@ p {
 }
 
 /*Gestion des sliders*/
-#redZone, #greenZone, #blueZone, #satZone {
+.sliderZone {
   float: left;
   width: 10px;
   margin: 16px;
 }
-#redValue, #greenValue, #blueValue, #satValue {
+.sliderValue {
  color: white;
  text-align: center;
  font-size: 13px;
@@ -85,7 +85,7 @@ p {
  border-color: #00FFFF;/*Cyan*/
 
 }
-#red, #green, #blue, #sat {
+.slider {
   float: left;
   width: 10px;
   margin: 13px;
